--- a/photoalbum/application/views/scripts/album/show.phtml
+++ b/photoalbum/application/views/scripts/album/show.phtml
@@ -1,7 +1,11 @@
 <script type="text/javascript">
 
 baseURL = '<?php echo $this->baseUrl();?>';
-//$('#cpanel a').lightBox({
+$(document).ready(function(){
+	$(".dPhoto").css("display", "none");
+	$(".dPhotoDelete").css("display", "none");
+});
+
 $(function() {
 	$('#cpanel a').lightBox({
 	imageLoading: '<?php echo $this->baseUrl();?>/images/lightbox-ico-loading.gif',
@@ -47,6 +51,8 @@ function setHref(DivEle, hrefValue)
 
 function deletePic( albumId, picId  )
 {
+	if(!confirm('Are you sure you want to delete this picture?'));
+		return false;
 	setTimeout('$( "#jquery-overlay" ).click()', 0);
 	 URL = baseURL+'/photo/delete/pic/'+picId+'/album/'+albumId;
 	window.location = URL;
@@ -71,7 +77,7 @@ function Imagedownload (frmId, url)
 
 <?php if ( $this->album['author'] == $this->userid ) {?>
 <div class="left-align">
-<a href="<?php echo $this->baseUrl();?>/album/delete/album/<?php echo $this->album['id'];?>">Delete Album</a>
+<a href="<?php echo $this->baseUrl();?>/album/delete/album/<?php echo $this->album['id'];?>" onclick="return confirm('Are you sure you want to delete this album?');">Delete Album</a>
 </div>
 <?php } ?>
 
