--- a/photoalbum/application/views/scripts/album/index.phtml
+++ b/photoalbum/application/views/scripts/album/index.phtml
@@ -7,8 +7,7 @@
 		$cover = $album['picture'] ? $album['picture'] : 'noimage.png' ;
 	?>
     <div class="icon">
-    <a href="<?php echo $this->url(array('controller'=>'album',
-'action'=>'show'));?>?id=<?php echo $album['id'];?>"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" /><br />
+    <a href="<?php echo $this->baseUrl().'/album/show/aid/'.$album['id']; ?>"> <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" /><br />
  <span><?php echo ucwords($album['name'])?></span></a>
     </div>
     <?php endforeach; ?>
