--- a/photoalbum/application/views/scripts/user/show.phtml
+++ b/photoalbum/application/views/scripts/user/show.phtml
@@ -8,6 +8,13 @@
 </div>
 <?php endif; ?>
 
+<?php
+function shortName($str)
+{
+    $limit = 10;
+    return ucwords(substr($str, 0, $limit) . (strlen($str) > $limit ? "..." : ""));
+}
+?>          
 
 <div class="right-align"> <!-- remove add as friend link --></div>
 <div id="container">
@@ -21,7 +28,7 @@
     <div class="icon">
         <a href="<?php echo $this->baseUrl().'/album/show/aid/'.$album['id']; ?>">
 <img src="<?php echo $this->baseUrl(); ?>/phpthumb/phpThumb.php?src=../images/gallery/<?php echo $cover;?>&w=140&h=110" width="140" height="110" />
-        <span><?php echo ucwords($album['name'])?></span></a>
+        <span><?php echo shortName($album['name'])?></span></a>
     </div>
     <?php endforeach; ?>
   </div>
